<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/driver_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/race_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/max_verstappen"
            android:textColor="?attr/colorPrimary" />

        <TextView
            android:id="@+id/driver_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_22_46"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/driver_pts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_26"
            android:textColor="?attr/colorPrimary" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>